# zendesk-cli

./: .env.example  .gitignore  README.md  pyproject.toml
zd/: __init__.py  cli.py  client.py  config.py  context.py  display.py
